--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
     "cSpell.words": [
         "aporte",
+        "aqui",
         "calculadora",
+        "Coloque",
         "compostos",
+        "Conteúdo",
         "decorrido",
         "desejado",
         "dinheiro",
@@ -11,6 +14,9 @@
         "juros",
         "montante",
         "resultado",
-        "salario"
+        "Resultados",
+        "salario",
+        "Salário",
+        "titulo"
     ]
 }
